# app/models/user.rb
@@ -5,7 +5,21 @@ class User < ApplicationRecord
   has_many :shares
   has_many :media, through: :shares
 
+  has_many :likes
+
   def share(medium)
     media << medium
+  end
+
+  def like!(likable)
+    likes.create! likable: likable
+  end
+
+  def unlike!(likable)
+    like = likes.where(likable: likable).first
+
+    if like
+      likes.destroy like.id
+    end
   end
 end
