# config/routes.rb
@@ -8,7 +8,11 @@ Rails.application.routes.draw do
     mount GraphiQL::Rails::Engine, at: "/graphiql", graphql_path: "/graphql"
   end
 
+  concern :likeable do
+    resources :likes, except: [:show, :update]
+  end
+
   resources :media
   resources :users, except: [:destroy]
-  resources :shares, except: [:update]
+  resources :shares, except: [:update], concerns: :likeable
 end
