# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2022_03_17_145251) do
+ActiveRecord::Schema[7.0].define(version: 2022_03_17_204011) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "citext"
   enable_extension "plpgsql"
@@ -18,6 +18,17 @@ ActiveRecord::Schema[7.0].define(version: 2022_03_17_145251) do
   # Custom types defined in this database.
   # Note that some types may not work with other database engines. Be careful if changing database.
   create_enum "medium_type", ["book", "restaurant", "movie", "series", "video_game"]
+
+  create_table "likes", force: :cascade do |t|
+    t.string "likable_type", null: false
+    t.bigint "likable_id", null: false
+    t.bigint "user_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["likable_id", "likable_type", "user_id"], name: "index_likes_on_likable_id_and_likable_type_and_user_id", unique: true
+    t.index ["likable_type", "likable_id"], name: "index_likes_on_likable"
+    t.index ["user_id"], name: "index_likes_on_user_id"
+  end
 
   create_table "media", force: :cascade do |t|
     t.string "title"
@@ -46,6 +57,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_03_17_145251) do
     t.index ["email"], name: "index_users_on_email", unique: true
   end
 
+  add_foreign_key "likes", "users"
   add_foreign_key "shares", "media"
   add_foreign_key "shares", "users"
 end
